fix: minor changes

--- a/TP2/docs/informe/04-simulaciones.tex
+++ b/TP2/docs/informe/04-simulaciones.tex
@@ -68,7 +68,7 @@ Este observable calcula la distancia de la celda viva más alejada al centro de 
 en el paso temporal de equilibrio.
 Se define como:
 \begin{equation}
-    \text{D} = \max_{i, j, k | (i, j, k) \in \text{viva}} \left( \sqrt{(i - x/2)^2 + (j - y/2)^2 + (k - z/2)^2} \right)
+    \text{D} = \max_{i, j, k | (i, j, k) \in \text{Viva}} \left( \sqrt{(i - x/2)^2 + (j - y/2)^2 + (k - z/2)^2} \right)
     \label{eq:distancia-celda-viva-mas-alejada-al-centro}
 \end{equation}
 donde $D$ es la distancia de la celda viva más alejada al centro, $x$, $y$ y $z$ son las dimensiones de la matriz,
