--- a/TP2/docs/presentacion/04-simulaciones.tex
+++ b/TP2/docs/presentacion/04-simulaciones.tex
@@ -1,24 +1,56 @@
 \section{Simulacón}
-\begin{frame}{Background and Motivation}
-    \frametitle<presentation>{Background and Motivation}
-    \begin{block}{Why to give a presentation:}
+\begin{frame}{Parametros del sistema}
+    \begin{minipage}[t]{0.45\linewidth}
+
+        {\textbf{Parametrós fijos:}
         \begin{itemize}
-            \item show the main arguments and results of your work
-            \item produce interest to read the full paper/report
-            \item goal: be educational and also entertaining
-        \end{itemize}
-    \end{block}
-    \begin{block}{Advantages of using \LaTeX ~with the beamer package:}
+            \item Limites de la matriz (border)
+            \item Condición de vecindad
+            \item Alcance (r)
+            \item Cantidad de vecinos para:
+            \begin{itemize}
+                \item Mantener viva
+                \item Transicionar de muerta a viva
+            \end{itemize}
+            \item Dominio inicial
+        \end{itemize}}
+    \end{minipage}
+    \begin{minipage}[t]{0.45\linewidth}
+        \textbf{Parametrós variables:}
         \begin{itemize}
-            \item very easy if the report is already written in \LaTeX
-            \item different themes which are usable in practice
-            \item possibility to create handouts using \emph{beamerarticle}
+            \item Cantidad maxima de pasos temporales.
+            \item Proporción inicial de celdas vivas
         \end{itemize}
-    \end{block}
+
+    \end{minipage}
 \end{frame}
 
-\begin{frame}{Research question}
+\begin{frame}{Observables}
 
-    this is a Research question.
+    \begin{block}{Cantidad de celdas vivias}
+
+    \end{block}
+
+    \begin{block}{Variación de la cantidad de celdas vivas}
+
+    \end{block}
+
+    \begin{block}{Tiempo de convergencia al equilibrio}
+
+    \end{block}
+
+
+\end{frame}
+
+\begin{frame}{Observables}
+
+    \begin{block}{Distancia de la celda viva más alejada al centro}
+
+    \end{block}
+
+    \begin{block}{Rapidez de alejamiento de la celda viva más alejada al centro}
+
+    \end{block}
+
 
 \end{frame}
