--- a/TP2/docs/presentacion/06-conclusiones.tex
+++ b/TP2/docs/presentacion/06-conclusiones.tex
@@ -1,24 +1,14 @@
 \section{Conclusiones}
-\begin{frame}{Background and Motivation}
-    \frametitle<presentation>{Background and Motivation}
-    \begin{block}{Why to give a presentation:}
+\begin{frame}{Conclusiones}
+    \begin{itemize}
+        \item Conway 2D
+        \item Cuarentena 2D
+        \item Expansión circular 2D
+        \item Conway 3D
         \begin{itemize}
-            \item show the main arguments and results of your work
-            \item produce interest to read the full paper/report
-            \item goal: be educational and also entertaining
+            \item Conway 3D vs Conway 2D
         \end{itemize}
-    \end{block}
-    \begin{block}{Advantages of using \LaTeX ~with the beamer package:}
-        \begin{itemize}
-            \item very easy if the report is already written in \LaTeX
-            \item different themes which are usable in practice
-            \item possibility to create handouts using \emph{beamerarticle}
-        \end{itemize}
-    \end{block}
-\end{frame}
-
-\begin{frame}{Research question}
-
-    this is a Research question.
-
+        \item Colapso 3D
+        \item Expansión cúbica 3D
+    \end{itemize}
 \end{frame}
