--- a/TP2/docs/presentacion/04-simulaciones.tex
+++ b/TP2/docs/presentacion/04-simulaciones.tex
@@ -1,10 +1,11 @@
-\section{Simulacón}
-\begin{frame}{Parametros del sistema}
+\section{Simulación}
+
+\begin{frame}{Parámetros del sistema}
     \begin{minipage}[t]{0.45\linewidth}
 
-        {\textbf{Parametrós fijos:}
+        {\textbf{Parámetros fijos:}
         \begin{itemize}
-            \item Limites de la matriz (border)
+            \item Límites de la matriz (border)
             \item Condición de vecindad
             \item Alcance (r)
             \item Cantidad de vecinos para:
@@ -16,9 +17,9 @@
         \end{itemize}}
     \end{minipage}
     \begin{minipage}[t]{0.45\linewidth}
-        \textbf{Parametrós variables:}
+        \textbf{Parámetros variables:}
         \begin{itemize}
-            \item Cantidad maxima de pasos temporales.
+            \item Cantidad máxima de pasos temporales.
             \item Proporción inicial de celdas vivas
         \end{itemize}
 
