--- a/TP2/docs/presentacion/05-resultados.tex
+++ b/TP2/docs/presentacion/05-resultados.tex
@@ -2,7 +2,7 @@
 
 % Sistema 1: Conway 2D
 
-\begin{frame}[c]{Conway 2D}
+\begin{frame}{Conway 2D}
     \begin{multicols}{2}
         {
             $border = (0, 0) \times (100, 100)$
@@ -150,7 +150,7 @@
 
 \begin{frame}{Cuarentena 2D}
     \textcolor{hkustblue}\textbf{Cantidad de celdas vivas en función del tiempo}
-    {\small
+    {\footnotesize
     \begin{multicols}{3}
         {
             \begin{figure}[H]
@@ -413,7 +413,7 @@
 
 \begin{frame}{Colapso cúbico}
     \textbf{Cantidad de celdas vivas en función del tiempo}
-    {\small
+    {\footnotesize
     \begin{multicols}{3}
         {
             \begin{figure}[H]
@@ -466,7 +466,7 @@
 
 \begin{frame}{Colapso cúbico}
     \textbf{Distancia de la celda viva más lejana al centro en función del tiempo}
-    {\small
+    {\footnotesize
     \begin{multicols}{3}
         {
             \begin{figure}[H]
