chore: final version

--- a/TP2/docs/presentacion/01-introduccion.tex
+++ b/TP2/docs/presentacion/01-introduccion.tex
@@ -23,7 +23,7 @@
         \begin{minipage}[t]{0.8\linewidth}
             \begin{itemize}
                 \item \textbf{2D}: $N_{i,j}^{(vN)}:=\{(a,b) \in L\ |\ |a - i| + |b - j| \leq r\}$.
-                \item \textbf{3D}: $N_{i,j, k}^{(vN)}:=\{(a,b,c) \in L\ |\ |a-i| + |b - j| + |c + k| \leq r\}$.
+                \item \textbf{3D}: $N_{i,j, k}^{(vN)}:=\{(a,b,c) \in L\ |\ |a-i| + |b - j| + |c - k| \leq r\}$.
             \end{itemize}
         \end{minipage}%
         \hfill%
