--- a/TP2/docs/presentacion/04-simulaciones.tex
+++ b/TP2/docs/presentacion/04-simulaciones.tex
@@ -5,7 +5,7 @@
 
         {\textbf{Parámetros fijos:}
         \begin{itemize}
-            \item Límites de la matriz (border)
+            \item Lí<mites de la matriz (border)
             \item Condición de vecindad
             \item Alcance (r)
             \item Cantidad de vecinos para:
@@ -28,7 +28,7 @@
 
 \begin{frame}{Observables}
 
-    \begin{block}{Cantidad de celdas vivias}
+    \begin{block}{Cantidad de celdas vivas}
         \begin{equation}
             \text{Q} = \sum_{i=1}^{x} \sum_{j=1}^{y} \sum_{k=1}^{z} \mathbbm{1}_{\text{viva}}
             \label{eq:cantidad-celdas-vivas}
