--- a/TP2/docs/presentacion/05-resultados.tex
+++ b/TP2/docs/presentacion/05-resultados.tex
@@ -55,14 +55,14 @@
     \end{multicols}
 \end{frame}
 
-\begin{frame}{Conway 2D}
-    \textbf{Observable: Cantidad de celdas vivas en el equilibrio}
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=0.8\linewidth]{pic/conway2d/size_vs_input}
-        \label{fig:conway2d:size:density}
-    \end{figure}
-\end{frame}
+%\begin{frame}{Conway 2D}
+%    \textbf{Observable: Cantidad de celdas vivas en el equilibrio}
+%    \begin{figure}[H]
+%        \centering
+%        \includegraphics[width=0.8\linewidth]{pic/conway2d/size_vs_input}
+%        \label{fig:conway2d:size:density}
+%    \end{figure}
+%\end{frame}
 
 \begin{frame}{Conway 2D}
     \textbf{Observable: Variación de la cantidad de celdas vivas}
@@ -106,14 +106,14 @@
     \end{figure}
 \end{frame}
 
-\begin{frame}{Conway 2D}
-    \textbf{Observable: Rapidez de alejamiento de la celda viva más lejana al centro}
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=0.8\linewidth]{pic/conway2d/distance_slope_vs_input}
-        \label{fig:conway2d:distance_slope:density}
-    \end{figure}
-\end{frame}
+%\begin{frame}{Conway 2D}
+%    \textbf{Observable: Rapidez de alejamiento de la celda viva más lejana al centro}
+%    \begin{figure}[H]
+%        \centering
+%        \includegraphics[width=0.8\linewidth]{pic/conway2d/distance_slope_vs_input}
+%        \label{fig:conway2d:distance_slope:density}
+%    \end{figure}
+%\end{frame}
 
 
 % Sistema 2 Cuarentena 2D
@@ -318,14 +318,14 @@
     \end{multicols}
 \end{frame}
 
-\begin{frame}{Conway 3D}
-    \textbf{Observable: Cantidad de celdas vivas en el equilibrio}
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=0.8\linewidth]{pic/conway3d/size_vs_input}
-        \label{fig:conway3d:size:density}
-    \end{figure}
-\end{frame}
+%\begin{frame}{Conway 3D}
+%    \textbf{Observable: Cantidad de celdas vivas en el equilibrio}
+%    \begin{figure}[H]
+%        \centering
+%        \includegraphics[width=0.8\linewidth]{pic/conway3d/size_vs_input}
+%        \label{fig:conway3d:size:density}
+%    \end{figure}
+%\end{frame}
 
 \begin{frame}{Conway 3D}
     \textbf{Observable: Variación de la cantidad de celdas vivas}
@@ -368,14 +368,14 @@
     \end{figure}
 \end{frame}
 
-\begin{frame}{Conway 3D}
-    \textbf{Observable: Rapidez de alejamiento de la celda viva más lejana al centro}
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=0.8\linewidth]{pic/conway3d/distance_slope_vs_input}
-        \label{fig:conway3d:distance_slope:density}
-    \end{figure}
-\end{frame}
+%\begin{frame}{Conway 3D}
+%    \textbf{Observable: Rapidez de alejamiento de la celda viva más lejana al centro}
+%    \begin{figure}[H]
+%        \centering
+%        \includegraphics[width=0.8\linewidth]{pic/conway3d/distance_slope_vs_input}
+%        \label{fig:conway3d:distance_slope:density}
+%    \end{figure}
+%\end{frame}
 
 
 
