--- a/TP2/docs/presentacion/04-simulaciones.tex
+++ b/TP2/docs/presentacion/04-simulaciones.tex
@@ -5,7 +5,7 @@
 
         {\textbf{Parámetros fijos:}
         \begin{itemize}
-            \item Lí<mites de la matriz (border)
+            \item Límites de la matriz (border)
             \item Condición de vecindad
             \item Alcance (r)
             \item Cantidad de vecinos para:
