--- a/TP3/docs/main.tex
+++ b/TP3/docs/main.tex
@@ -30,6 +30,7 @@
 \usepackage{HKUSTstyle}
 \usepackage{blkarray}
 \usepackage{caption}
+\usepackage{algorithmicx}
 
 % defs
 \def\cmd#1{\texttt{\color{red}\footnotesize $\backslash$#1}}
@@ -59,8 +60,8 @@
         \vspace*{-0.6cm}
         \begin{figure}[htpb]
             \begin{center}
-                \includegraphics[keepaspectratio, scale=0.15]{pic/itba.png}
-            \end{center}
+                \includegraphics[keepaspectratio, scale=0.15]{pic/itba}
+            \end{center}\label{fig:figure-itba}
         \end{figure}
     \end{frame}
 
